<resources>
    <string name="logout_message">Sign Out</string>
    <string name="firstname_hint">First name</string>
    <string name="middlename_hint">Middle name</string>
    <string name="lastname_hint">Last name</string>
    <string name="dismiss_message">OK</string>
    <string name="trace_message">Trace</string>
    <string name="pref_message">System</string>
    <string name="error_title">Unexpected Error</string>
    <string name="your_token">Your session token:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dobMsg">Patient Date of Birth:</string>
    <string name="next_message">Next</string>
    <string name="location_hint">Location</string>
    <string name="genderMsg">Patient Sex:</string>
    <string name="bad_fields_title">Invalid Fields</string>
    <string name="skip_camera_message">Skip This Step</string>
    <string name="qr_start_message">Scan QR Code</string>
    <string name="bad_qr_title">Invalid QR Code</string>
    <string name="create_client">Create Client</string>
    <string name="no_location">No location specified.</string>
    <string name="sign_out_reassurance">Are you sure you would like to sign out?</string>
    <string name="skip_step_reassurance">Are you sure you want to skip taking a picture of the client? Taking a picture
        is highly recommended.</string>
    <string name="sign_out_wait">Signing out</string>
    <string name="sign_in_wait">Signing in</string>
    <string name="cap_demo_message">Enter information about the patient.</string>
    <string name="bad_fields">Please enter information into all fields that appear in red.</string>
    <string name="cameraInstructions">Take a picture of the client.</string>
    <string name="systemInstructions">Current session info is displayed. To go back, press the back button on your device.</string>
    <string name="qrInstructions">Scan a Clarity QR Code for the client\'s ticket.</string>
    <string name="bad_qr_message">The QR code you scanned was invalid. Ensure you are only using QR codes
        generated by the Clarity Console and try again.</string>
    <string name="overview_confirmation">Are these settings okay? To go back, press the back button on your device.</string>
    <string name="invalid_token">The session token is no longer valid.</string>
    <string name="server_error">The server is experiencing technical difficulties. Please try again later.</string>
	<string name="version_number_stable">v0.0.1-S3</string>
	<string name="version_number_unstable">v0.0.1-U3</string>
	<string name="app_name_stable">Clarity</string>
	<string name="app_name_unstable">Clarity (U3)</string>
    <string name="copyrightInfo">©2014 Akshay Sharma, Aditya Johri, Jonathan Ballands, Samuel Gillispie</string>
    <string name="menu_settings">Settings</string>
	<string name="image_descript">An image</string>
    <string name="custom_descript">A custom view</string>
    <string name="textview_descript">A text view</string>
	<string name="activity_login_message">You must sign in to use Clarity.</string>
	<string name="activity_login_user_hint">Username</string>
	<string name="activity_login_pass_hint">Password</string>
	<string name="activity_login_sign_in">Sign In</string>
	<string name="activity_login_sign_in_error">The username/password combination you entered was not recognized.
        Review your credentials and try again.</string>
    <string name="activity_main_system">Info</string>
    <string name="activity_main_session">Session</string>
    <string name="activity_main_signout">Sign Out</string>
    <string name="activity_main_more">More Choices</string>
    <string name="activity_main_instructions">Choose an activity.</string>
    <string name="activity_main_createbutton_instructions">Create a new patient</string>
    <string name="activity_main_findbutton_instructions">Find an existing patient</string>
    <string name="activity_main_scan_ticket_wait">Searching for the ticket</string>
    <string name="activity_main_scan_patient_wait">Tracing patient from ticket</string>
    <string name="activity_main_scan_noticket">The ticket cannot be found. Ensure you are using a valid ticket and try again.</string>
    <string name="activity_main_scan_hanging_ticket">It seems that the ticket scanned was valid but had no patient associated
        with it. This may be a system error. Contact a supervisor to resolve this issue.</string>
    <string name="activity_main_scan_malformed">Unfortunately, an error has occurred. Please try again later.</string>
    <string name="activity_create_patient_upload">Send to Cloud</string>
    <string name="activity_create_patient_demographics">Info</string>
	<string name="activity_create_patient_picture">Picture</string>
	<string name="activity_create_patient_qrcode">Sync</string>
	<string name="activity_create_patient_push_reassurance">Are you sure you would like to sync this patient with the cloud?</string>
	<string name="activity_create_patient_cp">Creating patient</string>
	<string name="activity_create_patient_tl">Linking ticket to patient</string>
	<string name="activity_create_patient_bad_fields">Not all of the required fields are filled.
	    The required fields are: First name, Last name, and Patient sex. Go to the \'Info\' tab to fill these.</string>
	<string name="activity_create_patient_no_ticket">No ticket was scanned. All new patients must be linked to a ticket
	    before receiving care. Go to the \'Sync\' tab to scan one.</string>
	<string name="activity_create_patient_quit_assurance">Are you sure you would like to leave this activty? Any changes you\'ve made will be lost.</string>
    <string name="fragment_demographics_instruct1">Enter name and location.</string>
    <string name="fragment_demographics_instruct2">Choose the patient\'s sex.</string>
    <string name="fragment_demographics_instruct3">Choose the patient\'s DOB.</string>
    <string name="fragment_camera_instruct">Taking a picture of the patient can improve patient search accuracy.</string>
    <string name="fragment_camera_start_message">Take a Picture</string>
    <string name="fragment_camera_unable_to_make_file_error">An unexpected error occurred while Clarity was interacting
        with your file system. Notify administrators.</string>
    <string name="fragment_qrcode_instruct1">Clarity knows about a ticket because it knows its unique QR code. Scan the QR
        code on the ticket to sync it with Clarity.</string>
    <string name="fragment_qrcode_scan_start_message">Scan a Ticket</string>
    <string name="fragment_qrcode_nodata">No QR code data</string>
    <string name="fragment_qrcode_instruct2">Choose services for patient.</string>
    <string name="fragment_qrcode_data_instruct">Ticket ID</string>
    <string name="activity_find_search_by_ticket">Find by Ticket</string>
    <string name="activity_find_search_by_name">Find by Info</string>
    <string name="activity_find_scan_qr_wait">Searching</string>
    <string name="activity_find_scan_qr_no_results">There are no patients registered to this ticket. Ensure you are using the correct ticket.</string>
    <string name="fragment_search_by_id_instruct">If you have a ticket with you, you can find the patient by scanning
        the ticket\'s QR code.</string>
    <string name="fragment_search_by_id_start_message">Scan a Ticket</string>
    <string name="activity_choose_ticket_quit_assurance">Are you sure you would like to leave this activity?</string>
    <string name="activity_choose_ticket_more_info">More Details</string>
    <string name="activity_choose_ticket_instruct">Choose a ticket.</string>
    <string name="activity_choose_ticket_no_results">This ticket does not exist. This is a system error. Contact a supervisor immediately.</string>
    <string name="activity_choose_ticket_wait">Fetching</string>
    <string name="activity_choose_ticket_add">Start a new ticket</string>
    <string name="activity_view_ticket_more_info">More Details</string>
    <string name="activity_view_ticket_status_instruct">Ticket Status:</string>
    <string name="activity_view_patient_locked">Locked</string>
    <string name="activity_view_ticket_push_reassurance">Are you sure you would like to sync your changes with the cloud?</string>
    <string name="activity_view_ticket_sync_wait">Syncing ticket data</string>
    <string name="activity_view_ticket_refresh">Refreshing</string>
    <string name="activity_view_ticket_no_results">This ticket does not exist. This is a system error. Contact a supervisor immediately.</string>
    <string name="activity_view_ticket_unchanged">You cannot sync a ticket with the cloud that hasn\'t been modified. Either check
        a service off the list, or press the \'Back\' button on your device to go back.</string>
    <string name="activity_new_ticket_more_info">More Details</string>
    <string name="service_left_leg">Left Leg</string>
    <string name="service_left_leg_hint">A full, prosthetic, left leg.</string>
    <string name="service_right_leg">Right Leg</string>
    <string name="service_right_leg_hint">A full, prosthetic, right leg.</string>
    <string name="service_left_shin">Left Shin</string>
    <string name="service_left_shin_hint">A prosthetic up to the patient\'s left knee.</string>
    <string name="service_right_shin">Right Shin</string>
    <string name="service_right_shin_hint">A prosthetic up to the patient\'s right knee.</string>
    <string name="service_left_arm">Left Arm</string>
    <string name="service_left_arm_hint">A full, prosthetic, left arm.</string>
    <string name="service_right_arm">Right Arm</string>
    <string name="service_right_arm_hint">A full, prosthetic, right arm.</string>
    <string name="service_wheelchair">Wheelchair</string>
    <string name="service_wheelchair_hint">Patient will use their arms to move around.</string>
    <string name="service_tricycle">Tricycle</string>
    <string name="service_tricycle_hint">Patient will use their legs to move around.</string>
    <string name="service_crutches">Crutches</string>
    <string name="service_crutches_hint">Patient will use their arms to stay upright.</string>
    <string name="service_sewing">Sewing Machine</string>
    <string name="service_sewing_hint">A sewing machine that the patient can sew textiles with.</string>
    <string name="service_tea">Tea Stand</string>
    <string name="service_tea_hint">A complete stand to help the patient sell tea.</string>
    <string name="service_loan">Loan</string>
    <string name="generic_error_no_internet">It appears that your device isn\'t connected to the Internet.
        Connect your device to the Internet and try again.</string>
        <string name="generic_error_no_internet_boot">It appears that your device isn\'t connected to the Internet.
        You will now be returned to the sign in screen.</string>
    <string name="generic_error_internal_server_error">The server is experiencing technical difficulties at this time. Please try
        again later.</string>
    <string name="generic_error_timeout">Communication with the server took too long and was canceled. You may have
        a weak connection to the Internet or the cloud may be unavailable.</string>
        <string name="generic_error_cannot_establish_connection">A stable connection with the server could not
            be established. Check that the router you are connected to is connected to the Internet and try again.</string>
            <string name="generic_error_unparseable_json">An unexpected error has occurred. This is could be a problem with
                your connection strength. Ensure you have a strong connection to the Internet and try again.</string>
    <string name="generic_error_generic">An unexpected error has occurred.</string>
</resources>