<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:svgimageview="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/welcome_gradient"
    android:orientation="vertical" >

	<LinearLayout
	    android:id="@+id/activity_login_login_form"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" 
	   	android:layout_centerInParent="true" >
	
	    <ImageView
	        android:id="@+id/logo"
	        android:layout_width="250dip"
	        android:layout_height="104dip"
	        android:layout_gravity="center"
	        android:contentDescription="@string/image_descript" />
	
	    <TextView
	        android:id="@+id/welcomeMessage"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/activity_login_message"
	        android:textSize="18sp"
	        android:textColor="#FFFFFF"
	        android:layout_marginTop="20sp"
	        android:contentDescription="@string/textview_descript" />
	
	    <EditText
	        android:id="@+id/usernameField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="10sp"
	        android:layout_marginTop="20sp"
	        android:background="@drawable/edittext_styling"
	        android:ems="10"
	        android:hint="@string/activity_login_user_hint"
	        android:inputType="textVisiblePassword"
	        android:singleLine="True"
	        android:textStyle="italic"
	        android:textColor="#009BE8"
	        android:textColorHint="#8AD8FF"
	        android:typeface="normal" >
	
	    </EditText>
	
	    <EditText
	        android:id="@+id/passwordField"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10sp"
	        android:layout_marginRight="10sp"
	        android:background="@drawable/edittext_styling"
	        android:ems="10"
	        android:hint="@string/activity_login_pass_hint"
	        android:inputType="textPassword"
	        android:singleLine="True"
	        android:textStyle="italic"
	        android:textColor="#009BE8"
	        android:textColorHint="#8AD8FF"
	        android:typeface="normal" />
	    
	    <Button
	        android:id="@+id/loginButton"
	        android:layout_width="150sp"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10sp"
	        android:layout_gravity="center"
	        android:textSize="18sp"
	        android:textColor="#008556"
	        android:text="@string/activity_login_sign_in"
	        android:background="@drawable/green_button"
	        android:contentDescription="@string/custom_descript" />
	    
	</LinearLayout>
	
	<TextView 
		android:id="@+id/versionNumber" 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/activity_login_login_form"
	    android:layout_centerHorizontal="true"
	    android:text="@string/version_number_unstable"
	    android:layout_marginTop="25sp"
	    android:textColor="#FFFFFF" />
	
</RelativeLayout>
