<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:svgimageview="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/welcome_gradient"
    android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dip"
            android:paddingBottom="25dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >
            
            <TextView
                android:id="@+id/fragment_qrcode_data_instruct"
                android:layout_width="wrap_content"
	         	android:layout_height="wrap_content"
	         	android:textColor="#FFFFFF"
	         	android:textStyle="italic"
	         	android:layout_centerHorizontal="true"
	         	android:text="@string/fragment_qrcode_data_instruct"
	           	android:textSize="22sp" />
            
            <View
        	    android:id="@+id/fragment_qrcode_divider_n2"
        	    android:layout_below="@id/fragment_qrcode_data_instruct"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
	         <TextView
	         	android:id="@+id/fragment_qrcode_data"
	         	android:layout_width="wrap_content"
	         	android:layout_height="wrap_content"
	         	android:layout_below="@id/fragment_qrcode_divider_n2"
	         	android:layout_marginTop="10dip"
	         	android:textColor="#FFFFFF"
	         	android:textStyle="italic"
	         	android:layout_centerHorizontal="true"
	         	android:text="@string/fragment_qrcode_nodata"
	           	android:textSize="13sp" />
	         <View
        	    android:id="@+id/fragment_qrcode_divider_n1"
        	    android:layout_below="@id/fragment_qrcode_data"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
            
            <TextView
                android:id="@+id/fragment_qrcode_instruct1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/fragment_qrcode_divider_n1"
                android:layout_marginTop="10dip"
                android:text="@string/fragment_qrcode_instruct1"
                android:textSize="18sp" />
            
            <Button
                android:id="@+id/fragment_scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_instruct1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dip"
                android:background="@drawable/green_button"
                android:contentDescription="@string/custom_descript"
                android:paddingLeft="25dip"
                android:paddingRight="25dip"
                android:text="@string/fragment_qrcode_scan_start_message"
                android:textColor="#008556"
                android:textSize="18sp" />
            
             <TextView
                android:id="@+id/fragment_qrcode_instruct2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_scan_button"
                android:layout_marginTop="35dip"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"
                android:text="@string/fragment_qrcode_instruct2"
                android:textSize="22sp" />
        
            <!-- Begin checkboxes --> 
            
            <View
        	    android:id="@+id/fragment_qrcode_divider0"
        	    android:layout_below="@id/fragment_qrcode_instruct2"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="20dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
             
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_left_leg_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider0"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_left_leg"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_left_leg_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_left_leg_checkbox"
                android:layout_marginLeft="30dip"
                android:textStyle="italic"
                android:textColor="#FFFFFF"
                android:text="@string/service_left_leg_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider1"
        	    android:layout_below="@id/fragment_qrcode_left_leg_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_left_shin_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider1"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_left_shin"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_left_shin_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_left_shin_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_left_shin_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider2"
        	    android:layout_below="@id/fragment_qrcode_left_shin_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_right_leg_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider2"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_right_leg"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_right_leg_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_right_leg_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_right_leg_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider3"
        	    android:layout_below="@id/fragment_qrcode_right_leg_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_right_shin_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider3"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_right_shin"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_right_shin_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_right_shin_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_right_shin_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider4"
        	    android:layout_below="@id/fragment_qrcode_right_shin_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_left_arm_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider4"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_left_arm"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_left_arm_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_left_arm_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_left_arm_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider5"
        	    android:layout_below="@id/fragment_qrcode_left_arm_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_right_arm_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider5"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_right_arm"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_right_arm_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_right_arm_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_right_arm_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider6"
        	    android:layout_below="@id/fragment_qrcode_right_arm_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_wheelchair_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider6"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_wheelchair"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_wheelchair_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_wheelchair_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_wheelchair_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider7"
        	    android:layout_below="@id/fragment_qrcode_wheelchair_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_tricycle_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider7"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_tricycle"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_tricycle_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_tricycle_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_tricycle_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider8"
        	    android:layout_below="@id/fragment_qrcode_tricycle_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_crutches_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider8"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_crutches"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_crutches_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_crutches_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_crutches_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider9"
        	    android:layout_below="@id/fragment_qrcode_crutches_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_sewing_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider9"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_sewing"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_sewing_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_sewing_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_sewing_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider10"
        	    android:layout_below="@id/fragment_qrcode_sewing_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<CheckBox 
        	    android:id="@+id/fragment_qrcode_tea_checkbox"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_below="@id/fragment_qrcode_divider10"
        		android:textColor="#FFFFFF"
        		android:text="@string/service_tea"	/>
        	<TextView 
        	    android:id="@+id/fragment_qrcode_tea_descript"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_tea_checkbox"
                android:textStyle="italic"
                android:layout_marginLeft="30dip"
                android:textColor="#FFFFFF"
                android:text="@string/service_tea_hint"
                android:textSize="14sp" />
        	
        	<View
        	    android:id="@+id/fragment_qrcode_divider11"
        	    android:layout_below="@id/fragment_qrcode_tea_descript"
    			android:layout_width="fill_parent"
    			android:layout_marginTop="10dip"
    			android:layout_height="1dp"
    			android:background="#FFFFFF" />
        	
        	<TextView 
        	    android:id="@+id/fragment_qrcode_loan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fragment_qrcode_divider11"
                android:layout_marginTop="10dip"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:text="@string/service_loan" />
        	
        	<NumberPicker
        		android:id="@+id/fragment_qrcode_loan_picker"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_centerHorizontal="true"
        		android:layout_below="@id/fragment_qrcode_loan"
        		android:layout_marginTop="10dip" />
		
 	</RelativeLayout>       	
</ScrollView>